Fixed Middleware to be uppercase when not in file name or link path.

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -11,7 +11,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 ### Install `@clerk/nextjs`
 
-Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and middleware.
+Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and Middleware.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
@@ -102,7 +102,7 @@ import { authMiddleware } from "@clerk/nextjs";
 
 // This example protects all routes including api/trpc routes
 // Please edit this to allow other routes to be public as needed.
-// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your middleware
+// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
 export default authMiddleware({});
 
 export const config = {
@@ -111,7 +111,7 @@ export const config = {
 
 ```
 
-With this middleware, your entire application is protected. If you try to access it, the middleware will redirect you to your Sign Up page. If you want to make other routes public, check out the [authMiddleware reference page](/docs/references/nextjs/auth-middleware).
+With this Middleware, your entire application is protected. If you try to access it, the Middleware will redirect you to your Sign Up page. If you want to make other routes public, check out the [authMiddleware reference page](/docs/references/nextjs/auth-middleware).
 
 ### Build your own sign-in and sign-up pages
 
@@ -270,7 +270,7 @@ export default function Example() {
 
 #### App Router
 
-[`auth()`][auth-ref] and [`currentUser()`][currentuser-ref] are App Router-specific helpers that you can use inside of your Route Handlers, middleware, Server Components, and Server Actions.
+[`auth()`][auth-ref] and [`currentUser()`][currentuser-ref] are App Router-specific helpers that you can use inside of your Route Handlers, Middleware, Server Components, and Server Actions.
 
 
 The [`auth()`][auth-ref] helper will return the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. Now that request data is available in the global scope through Next.js's `headers()` and `cookies()` methods, passing the request object to Clerk is no longer required.
@@ -283,7 +283,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
 <Tabs items={["Route Handler", "Route Handler w/ User Fetch"]}>
   <Tab>
-    A Route Hanlder added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+    A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="app/api/user/route.[jsx/tsx]"
     import { NextResponse } from 'next/server';
@@ -334,7 +334,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
 <Tabs items={["API Route", "API Route w/ User Fetch", "getServerSideProps"]}>
   <Tab>
-    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth()`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="pages/api/auth.ts"
     import type { NextApiRequest, NextApiResponse } from "next";
@@ -354,7 +354,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     ```
   </Tab>
   <Tab>
-    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth()`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
     In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
@@ -383,7 +383,7 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   </Tab>
 
   <Tab>
-    You can access the active session and user data in your `getServerSideProps` using the [`getAuth`](/docs/references/nextjs/get-auth) helper.
+    You can access the active session and user data in your `getServerSideProps` using the [`getAuth()`](/docs/references/nextjs/get-auth) helper.
 
     <Callout type="info" emoji="ℹ️">
       Please note the addition of `buildClerkProps` in the return statement, which informs the Clerk React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
