--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -281,7 +281,26 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   Any requests from a Client Component to a Route Handler will automatically include the user's current token as the Bearer token.
 </Callout>
 
-<Tabs items={["Route Handler", "Route Handler w/ User Fetch"]}>
+<Tabs items={["Server components and actions", "Route Handler", "Route Handler w/ User Fetch"]}>
+  <Tab>
+      Clerk has introduced new [`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) helpers for use in server components and server actions. The `auth()` helper returns the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of the user. The `currentUser()` helper loads the [`User`][user-object] object for the authenticated user. This is helpful if you want to render information, like their first and last name, directly from the server.
+
+    Under the hood, `currentUser()` uses the `clerkClient` wrapper to make a call to Clerk's Backend API. This does count towards the [Backend API Request Rate Limit](/docs/backend-requests/resources/rate-limits#rate-limits). This also uses `fetch()` so it is automatically deduped per request.
+
+    ```tsx filename="app/page.tsx"
+    import { auth, currentUser } from "@clerk/nextjs";
+
+    export default async function Page() {
+
+      // Get the userId from auth() -- if null the user is not logged in
+      const { userId } = auth();
+
+      // Get the User object when you need access to the user's information
+      const user = await currentUser()
+      // ...
+    }
+    ```
+  </Tab>
   <Tab>
     A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
