--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -326,7 +326,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   <Tab>
     A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler. The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
-    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use  [`currentUser()`](/docs/references/nextjs/current-user) helper to get the full [`User`][user-object] object. Under the hood, this calls `fetch()` so it is automatically deduped per request.
+    In some cases, you may need the full [`User`][user-object] object to retrieve information such as the user's email address or name. You can access the [`User`][user-object] object by using the [`currentUser()`](/docs/references/nextjs/current-user) helper. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
+
 
    ```tsx filename="app/api/user/route.ts"
     import { NextResponse } from 'next/server';
