--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -355,7 +355,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
 
 <Tabs items={["API Route", "API Route w/ User Fetch", "getServerSideProps"]}>
   <Tab>
-    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth()`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+    For Next.js applications using the Pages Router, you can retrieve information about the user and their authentication state, or control access to some or all of your API routes by using the [`getAuth()`][get-auth] helper. The [`getAuth()`][get-auth] helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+
 
     ```tsx filename="pages/api/auth.ts"
     import type { NextApiRequest, NextApiResponse } from "next";
