--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -405,7 +405,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   </Tab>
 
   <Tab>
-    You can access the active session and user data in your `getServerSideProps` using the [`getAuth()`](/docs/references/nextjs/get-auth) helper.
+    You can access the active session and user data in your `getServerSideProps` using the [`getAuth()`][get-auth] helper.
+
 
     <Callout type="info" emoji="ℹ️">
       Please note the addition of `buildClerkProps` in the return statement, which informs the Clerk React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
