--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -376,7 +376,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     ```
   </Tab>
   <Tab>
-    For Next.js applications using the Pages Router, you can get user information or authentication state, or control access to some or all of your API routes by using the [`getAuth()`](/docs/references/nextjs/get-auth) helper. The `getAuth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+    For Next.js applications using the Pages Router, you can retrieve information about the user and their authentication state, or control access to some or all of your API routes by using the [`getAuth()`][get-auth] helper. The [`getAuth()`][get-auth] helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+
 
     In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
