--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -432,7 +432,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     };
     ```
 
-    You can also access the full [`User`][user-object] object before passing it to the page by using the `clerkClient` helper.
+    You can also access the full [`User`][user-object] object before passing it to the page by using the [`clerkClient`][clerk-client] helper.
+
 
     ```tsx filename="pages/example.tsx"
     import { clerkClient } from "@clerk/nextjs";
