--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -13,34 +13,38 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```tsx filename="/app/pageWithData/clientComponent.tsx"
-      "use client";
-      import { useAuth } from '@clerk/nextjs';
+"use client";
 
-      export default function ExternalDataPage() {
-        const [data, setData] = useState<object>({});
-        const { getToken, isLoaded, isSignedIn } = useAuth();
+import * as React from "react";
+import { useAuth } from "@clerk/nextjs";
 
-        // Fetch data from a Next.js API route handler
-        useEffect(() => {
-          if (!isLoaded || !isSignedIn) {
-            // You can handle the loading or signed state separately
-            return;
-          }
+export default function ExternalDataPage() {
+  const [data, setData] = React.useState<object>({});
+  const { getToken, isLoaded, isSignedIn } = useAuth();
+  
+  // In this case, /api/example is a Next.js Route Handler
+  const fetchData = async () => {
+    fetch("/api/example", {
+      headers: { Authorization: `Bearer ${await getToken()}` },
+    })
+      .then((response) => response.json())
+      .then((data) => {
+        console.log("data", data);
+        setData(data);
+      });
+    return;
+  };
 
-          // Fetch data without async/await since this is a client component
-          getToken()
-          .then((token) =>
-          fetch('/api/protectedNextRoute', {
-            headers: {Authentication: `Bearer ${token}`}
-          }))
-          .then(response => response.json())
-                .then(data => {
-                  setData(data.data)
-                });
-        }, []);
+  React.useEffect(() => {
+    if (!isLoaded || !isSignedIn) {
+      // You can handle the loading or signed state separately
+    }
+    
+    fetchData();
+  }, []);
 
-        return <div>...</div>;
-      }
+  return <div>{JSON.stringify(data, null, 2)}</div>;
+}
       ```
 
       ```tsx filename="pages/index.tsx"
