update nextjs reference pages for the auth and currentuser helpers

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -5,7 +5,11 @@ description: Access minimal authentication data for managing sessions and data f
 
 # `auth()`
 
-The `auth` helper returns the [`Authentication` object](/docs/references/nextjs/authentication-object) of the currently active user. This is the same `Authentication` object that is returned by the [`getAuth`](/docs/references/nextjs/get-auth) hook. However, it can be used in server components, route handlers, and server actions.
+The `auth()` helper returns the [`Authentication`][auth-object] object of the currently active user. This is the same [`Authentication`][auth-object] object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
+
+The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
+
+A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler.
 
 ## Retrieving userId
 
@@ -54,3 +58,5 @@ export default async function Page() {
   )
 }
 ```
+
+[auth-object]: /docs/references/nextjs/authentication-object
