--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -42,7 +42,7 @@ curl -X POST https://api.clerk.com/v1/actor_tokens -d '{ \
 
 The above request will create an actor token that is valid for 600 seconds (10 minutes). Using the generated token will result in user with ID `user_21Ufcy98STcA11s3QckIwtwHIES` (the actor) signing in as user with ID `user_1o4qfak5AdI2qlXSXENGL05iei6` (the subject).
 
-When creating actor tokens, the object that you pass as the "actor" parameter will end up in the authentication token's "act" claim. You can read more details in the [JWT claims](#jwt-claims) section of this document.
+When creating actor tokens, the object that you pass as the `actor` parameter will end up in the authentication token's `act` claim. You can read more details in the [JWT claims](#jwt-claims) section of this document.
 
 ### Revoking actor tokens
 
@@ -60,9 +60,9 @@ Actor tokens can be [created from the Backend API](https://clerk.com/docs/refere
 
 The `url` attribute is a Clerk Frontend API URL that will use the token to sign out existing users and prepare the sign-in object for impersonation. You can directly visit the `url` provided in the response to consume the actor token.
 
-The Clerk Frontend API will redirect you to the /sign-in page of your application, where you can continue the flow by consuming the `__clerk_ticket` parameter.
+The Clerk Frontend API will redirect you to the `/sign-in` page of your application, where you can continue the flow by consuming the `__clerk_ticket` parameter.
 
-If you're using [ClerkJS](/docs/references/javascript/overview) directly and implementing a custom sign in flow, you should provide the token when [creating a sign in attempt](/docs/references/javascript/sign-in/sign-in#create).
+If you're using [ClerkJS](/docs/references/javascript/overview) directly and implementing a custom sign in flow, you should provide the token when [creating a sign-in attempt](/docs/references/javascript/sign-in/sign-in#create).
 
 ## Detecting impersonated sessions
 
@@ -222,7 +222,7 @@ If you prefer, you can impersonate a user right from the [Users](https://dashboa
   alt="The 'Users' page in the Clerk Dashboard. A red arrow points to the active 'Users' tab, showing users how to get to this page."
 />
 
-To impersonate a user, click on the menu icon on the right side of a user's row. A dropdown menu will appear. When you click on the "Impersonate user" option, your application instance should open in a new tab with the impersonated user signed in.
+To impersonate a user, click on the menu icon on the right side of a user's row. A dropdown menu will appear. When you click on the **Impersonate user** option, your application instance should open in a new tab with the impersonated user signed in.
 
 <Images
   width={3024}
