--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -240,29 +240,67 @@ Next you will want to retrieve the Webhook signing secret from the Clerk Dashboa
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
 ```ts
-router.post('/webhook', bodyParser.raw({type: 'application/json'}), async function(req, res) {
-    try {
-        const payload = req.body;
-        const headers = req.headers;
+import bodyParser from 'body-parser'
 
-        const wh = new Webhook(process.env.CLERK_WEBHOOK_SECRET_KEY)
-        const evt = wh.verify(payloadString, svixHeaders) as WebhookEvent;
-        const { id } = evt.data;
-        // Handle the webhook
-        const eventType = evt.type;
-        if (eventType === "user.created") {
-          console.log(`User ${id} was ${eventType}`);
-        }
-         res.status(200).json({
-            success: true,
-            message: 'Webhook received'
-         })
-    } catch (err) {
-        res.status(400).json({
-            success: false,
-            message: err.message
-        })
-    }
+app.post('/api/webhook', bodyParser.raw({ type: 'application/json' }), async function(req, res) {
+
+   // Check if the 'Signing Secret' from the Clerk Dashboard was correctly provided
+   const WEBHOOK_SECRET = process.env.WEBHOOK_SECRET
+   if (!WEBHOOK_SECRET) {
+      throw new Error('You need a WEBHOOK_SECRET in your .env')
+   }
+
+   // Grab the headers and body
+   const headers = req.headers;
+   const payload = req.body
+
+   // Get the SVIX headers for verification
+   const svix_id = headers["svix-id"] as string;
+   const svix_timestamp = headers["svix-timestamp"] as string;
+   const svix_signature = headers["svix-signature"] as string;
+
+   // If there are missing SVIX headers, error out
+   if (!svix_id || !svix_timestamp || !svix_signature) {
+      return new Response('Error occured -- no svix headers', {
+         status: 400
+      })
+   }
+
+   // Initiate SVIA
+   const wh = new Webhook(WEBHOOK_SECRET)
+
+   let evt: WebhookEvent
+
+   // Attempt to verify the incoming webhook
+   // If successful, the payload will be available from 'evt'
+   // If the verification fails, error out and  return error code
+   try {
+      evt = wh.verify(payload, {
+         "svix-id": svix_id,
+         "svix-timestamp": svix_timestamp,
+         "svix-signature": svix_signature,
+      }) as WebhookEvent
+   } catch (err: any) {
+      // Console log and return errro
+      console.log('Webhook failed to verify. Error:', err.message)
+      return res.status(400).json({
+         success: false,
+         message: err.message
+      })
+   }
+
+   // Grab the ID and TYPE of the Webhook
+   const { id } = evt.data;
+   const eventType = evt.type;
+
+   console.log(`Webhook with an ID of ${id} and type of ${eventType}`)
+   // Console log the full payload to view
+   console.log('Webhook body:', evt.data)
+
+   return res.status(200).json({
+      success: true,
+      message: 'Webhook received'
+   })
 })
 ```
 
